Stylized Voucher content (fix alignment)

--- a/src/App.css
+++ b/src/App.css
@@ -411,10 +411,67 @@ nav .sub-navbar li a {
   text-align: right;
 }
 
-
 .col{
   padding: 0 !important;
 }
+
+.card {
+  width: 40%;
+  height: 10em;
+  border-radius: 10px;
+  margin-right: 2em;
+  margin-bottom: 2em;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.claim-button {
+  background-color: #6a3c34;
+  color: white;
+  padding: 0.8rem 1.563rem;
+  border-radius: 10px;
+  border: none;
+  font-family: 'Work Sans';
+  font-weight: 200;
+  margin-top: 3.5em;
+  margin-right: 2em;
+}
+
+.voucher-icon{
+  padding-right: 0.5em;
+  height: 2em;
+}
+
+.voucher-title{
+  font-family: 'DM Serif Display';
+  font-weight: normal;
+  color: #6A3C34 !important;
+  font-size: 2em;
+  margin-bottom: 0 !important;
+}
+
+.voucher-desc {
+  font-family: 'Manrope';
+  font-size: 1.25em;
+  margin-bottom: 0 !important;
+}
+
+.voucher-date {
+  font-family: 'Sarabun';
+  font-weight: light;
+  text-align: center;
+}
+
+.voucher-row{
+  padding-top: 1.5em;
+  padding-left: 1em;
+}
+
+
 footer{
   background-color: #6A3C34;
   color: #FFF5E1;
